--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -5,10 +5,10 @@
     <title>Shopping Cart</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: Arial, sans-serif; background: #f5f5f5; }
+        body { font-family: Arial, sans-serif; background: #fbddff; }
 
         .header {
-            background: #333; color: white; padding: 20px;
+            background: #ea87f1; color: rgb(12, 12, 12); padding: 20px;
             display: flex; justify-content: space-between; align-items: center;
         }
 
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>My Shop</h1>
+        <h1>An Thanh's Shop</h1>
         <div class="cart-icon" onclick="toggleCart()">
             🛒 Cart
             <span class="cart-count" id="cartCount">0</span>
@@ -106,7 +106,11 @@
             { id: 1, name: 'Laptop',      price: 999.99, image: '💻' },
             { id: 2, name: 'Smartphone',  price: 699.99, image: '📱' },
             { id: 3, name: 'Headphones',  price: 199.99, image: '🎧' },
-            { id: 4, name: 'Smartwatch',  price: 299.99, image: '⌚' }
+            { id: 4, name: 'Smartwatch',  price: 299.99, image: '⌚' },
+            { id: 5, name: 'camera',  price: 300.00,   image: '📸' },
+            { id: 6, name: 'gun',  price: 1099.99, image: '🔫' },
+            { id: 7, name: 'CDs',  price: 99.99, image: '💿' },
+            { id: 8, name: 'radio',  price: 499.99, image: '📻' },
         ];
 
         // --------------------------------
